--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+backcall==0.1.0
 certifi==2019.9.11
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+decorator==4.4.1
 Django==2.2.7
 django-environ==0.4.5
 django-extensions==2.2.5
@@ -10,11 +12,20 @@ djangorestframework==3.10.3
 drf-yasg==1.17.0
 idna==2.8
 inflection==0.3.1
+ipython==7.9.0
+ipython-genutils==0.2.0
 itypes==1.1.0
+jedi==0.15.1
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 packaging==19.2
+parso==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
+prompt-toolkit==2.0.10
 psycopg2-binary==2.8.4
+ptyprocess==0.6.0
+Pygments==2.4.2
 pyparsing==2.4.5
 pytz==2019.3
 requests==2.22.0
@@ -23,5 +34,7 @@ ruamel.yaml.clib==0.2.0
 sentry-sdk==0.13.2
 six==1.13.0
 sqlparse==0.3.0
+traitlets==4.3.3
 uritemplate==3.0.0
 urllib3==1.25.7
+wcwidth==0.1.7
